...
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="OpenGlance" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="OpenGlance" systemMenu="apple" id="uQy-DD-JDr">
...
                            <constraint firstItem="JWf-aU-Sjt" firstAttribute="top" secondItem="2gR-n0-wZE" secondAttribute="top" constant="10" id="zQq-rv-FAv"/>
                        </constraints>
                        <accessibility description="DashboardMainView" identifier="DashboardMainView"/>
                    </view>
                    <connections>
...
                            <constraint firstItem="7uy-pD-grI" firstAttribute="leading" secondItem="q0i-aM-agG" secondAttribute="leading" constant="50" id="zOt-gZ-34v"/>
                        </constraints>
                        <accessibility description="CpuMainView" identifier="CpuMainView"/>
                    </view>
                    <connections>
...
                            <constraint firstItem="Ziw-yN-qhs" firstAttribute="leading" secondItem="XsI-br-NL6" secondAttribute="leading" constant="20" id="wBA-qw-sEm"/>
                        </constraints>
                        <accessibility description="MemoryMainView" identifier="MemoryMainView"/>
                    </view>
                    <connections>
...
                            <constraint firstItem="kZF-De-wAu" firstAttribute="leading" secondItem="gLt-Uu-NnI" secondAttribute="leading" constant="20" id="RW0-GZ-Xxe"/>
                        </constraints>
                        <accessibility description="NetworkMainView" identifier="NetworkMainView"/>
                    </view>
                    <connections>
...
                            <constraint firstItem="AoW-nk-eCM" firstAttribute="leading" secondItem="X4Z-EU-k4i" secondAttribute="leading" constant="50" id="vLT-YV-Ji6"/>
                        </constraints>
                        <accessibility description="FanMainView" identifier="FanMainView"/>
                    </view>
                    <connections>
...
                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4eh-dV-WXg" secondAttribute="trailing" constant="20" symbolic="YES" id="pi8-KM-Q3B"/>
                        </constraints>
                        <accessibility description="BatteryMainView" identifier="BatteryMainView"/>
                    </view>
                    <connections>
...
                            <constraint firstItem="Sy9-Qu-Fl1" firstAttribute="top" secondItem="VIp-kZ-3dC" secondAttribute="top" constant="20" id="wtl-XV-UiD"/>
                        </constraints>
                        <accessibility description="DiskMainView" identifier="DiskMainView"/>
                    </view>
                    <connections>
...
                                                            <constraint firstAttribute="height" constant="40" id="hMf-Dt-RTc"/>
                                                        </constraints>
                                                        <accessibility description="CpuSidebarButton" identifier="CpuSidebarButton"/>
                                                    </customView>
                                                    <customView identifier="MemoryButtonView" translatesAutoresizingMaskIntoConstraints="NO" id="Wve-Ay-nHh" userLabel="Memory Button View" customClass="SidebarButtonView" customModule="OpenGlance" customModuleProvider="target">
...
                                                            <constraint firstAttribute="width" constant="200" id="sfe-hv-asp"/>
                                                        </constraints>
                                                        <accessibility description="MemorySidebarButton" identifier="MemorySidebarButton"/>
                                                    </customView>
                                                    <customView identifier="NetworkButtonView" translatesAutoresizingMaskIntoConstraints="NO" id="23y-oU-wVB" userLabel="Network Button View" customClass="SidebarButtonView" customModule="OpenGlance" customModuleProvider="target">
...
                                                            <constraint firstItem="QaW-Ag-tPc" firstAttribute="centerY" secondItem="23y-oU-wVB" secondAttribute="centerY" id="jMc-bR-oya"/>
                                                        </constraints>
                                                        <accessibility description="NetworkSidebarButton" identifier="NetworkSidebarButton"/>
                                                    </customView>
                                                    <customView identifier="FanButtonView" translatesAutoresizingMaskIntoConstraints="NO" id="Bat-cd-Dzk" userLabel="Fan Button View" customClass="SidebarButtonView" customModule="OpenGlance" customModuleProvider="target">
...
                                                            <constraint firstItem="Oem-uJ-8dv" firstAttribute="leading" secondItem="Bat-cd-Dzk" secondAttribute="leading" id="tRO-hL-CWE"/>
                                                        </constraints>
                                                        <accessibility description="FanSidebarButton" identifier="FanSidebarButton"/>
                                                    </customView>
                                                    <customView identifier="BatteryButtonView" translatesAutoresizingMaskIntoConstraints="NO" id="foz-Uh-7R0" userLabel="Battery Button View" customClass="SidebarButtonView" customModule="OpenGlance" customModuleProvider="target">
...
                                                            <constraint firstAttribute="height" constant="40" id="z6Z-9h-xDA"/>
                                                        </constraints>
                                                        <accessibility description="BatterySidebarButton" identifier="BatterySidebarButton"/>
                                                    </customView>
                                                    <customView identifier="DiskButtonView" translatesAutoresizingMaskIntoConstraints="NO" id="3B3-B1-vJk" userLabel="Battery Button View" customClass="SidebarButtonView" customModule="OpenGlance" customModuleProvider="target">
...
                                                            <constraint firstItem="V6N-Tk-U6T" firstAttribute="leading" secondItem="3B3-B1-vJk" secondAttribute="leading" id="q8k-AA-AnT"/>
                                                        </constraints>
                                                        <accessibility description="DiskSidebarButton" identifier="DiskSidebarButton"/>
                                                    </customView>
                                                </subviews>
...
                                                            <constraint firstItem="Qi1-Xq-8G0" firstAttribute="leading" secondItem="2P1-JE-7vx" secondAttribute="leading" id="ww6-PT-O5t"/>
                                                        </constraints>
                                                        <accessibility description="SettingsSidebarButton"/>
                                                    </customView>
                                                </subviews>
...
                            <constraint firstItem="gR8-Vb-Wl8" firstAttribute="centerX" secondItem="PLM-Rc-O84" secondAttribute="centerX" id="jpd-PJ-EiZ"/>
                        </constraints>
                        <accessibility description="SettingsMainView" identifier="SettingsMainView"/>
                    </view>
                    <connections>
...
